<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonTranslate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_translate_btn" />

    <Button
        android:id="@+id/buttonListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_listview_btn" />

    <Button
        android:id="@+id/buttonRestaurantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_restaurantes_btn" />

    <Button
        android:id="@+id/buttonParkings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_parkings_btn" />

</LinearLayout>