<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textNomeUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_details_unknown_user"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/restaurant_details_has_choosen_the"
        app:layout_constraintStart_toEndOf="@+id/textNomeUsuario"
        tools:layout_editor_absoluteY="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textNomeRestaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/restaurant_details_restaurant_with_no_name"
        app:layout_constraintStart_toEndOf="@+id/textView"
        tools:layout_editor_absoluteY="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="."
        app:layout_constraintStart_toEndOf="@id/textNomeRestaurante"
        app:layout_editor_absoluteY="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>